# fort-decision-density

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build_package.py  docker-compose.yml  goblin-agent-lim42.md  goblin-energy-gradient.md  goblin-map.dot  goblin-ontology.ttl  goblin-shapes.ttl  ontology.ttl  pdca_agent_prompt.md  pyproject.toml  repo_assessment.md  shacl.ttl  visualization.md
.github/workflows/: ci.yml  js.yml  validate.yml
docs/: app.js  app.js.map  goblin-map.svg.new  goblin.json  index.html  kg.html  ttl-graph.dot
examples/: sample_input.md  sample_score.json
goblin_ontology/: cli.py  validator.py
goblin_ontology/data/: goblin-shapes.ttl
js/goblin-ontology/: package-lock.json  package.json  tsconfig.json
js/goblin-ontology/assets/: goblin-ontology.ttl
js/goblin-ontology/src/: cli.ts  shims.d.ts  validate.ts
samples/: goblin-sample.ttl
src/goblin/: __init__.py  resources.py  validate.py
src/goblin/data/: __init__.py  goblin-map.dot  goblin-ontology.ttl  goblin-sample.ttl  goblin-shapes.ttl
tools/: export_instances_dot.py  export_web_json.py  validate_sample_score.py  validate_shapes.py
tools/ci/: ghcr_login.sh  run_act_ghcr.sh
web/: package-lock.json  package.json  tsconfig.json
web/public/: style.css
web/src/: main.ts
