[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goblin-score"
version = "0.1.0"
description = "Ontology, SHACL shapes, and helpers for the Goblin (SCIG) score"
authors = [{ name = "nkllon" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "rdflib>=7.0.0",
  "pyshacl>=0.26",
]

[project.optional-dependencies]
dev = [
  "graphviz",
]

[project.scripts]
goblin-validate = "goblin.validate:main"
goblin-ontology-validate = "goblin_ontology.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goblin", "goblin_ontology"]

[tool.hatch.build.targets.wheel.force-include]
"goblin-ontology.ttl" = "goblin/data/goblin-ontology.ttl"
"goblin-shapes.ttl" = "goblin/data/goblin-shapes.ttl"
"goblin-map.dot" = "goblin/data/goblin-map.dot"
"samples/goblin-sample.ttl" = "goblin/data/goblin-sample.ttl"
"goblin_ontology/data/goblin-ontology.ttl" = "goblin_ontology/data/goblin-ontology.ttl"
"goblin_ontology/data/goblin-shapes.ttl" = "goblin_ontology/data/goblin-shapes.ttl"
